Ci: change actions on

--- a/.github/workflows/coverage-badge.yml
+++ b/.github/workflows/coverage-badge.yml
@@ -1,11 +1,11 @@
-name: Generate code coverage badge
+name: Test and Generate coverage badge
 
-#on:
-#  pull_request:
-#    branches:
-#      - main
-
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
+#
+#on: [push]
 
 jobs:
   test:
