Chore: add vendor path to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ tests/*
 .env
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+ vendor/
 
 # Go workspace file
 go.work
